--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Spritle DevOps - SampleRails6App</title>
+    <title>Анатолик-Шопоголик</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,7 +13,7 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <% if user_signed_in? %>
-      <span>Здравствуйте, <%= current_user.email %></span>
+      <span>Хай, <%= current_user.email %></span>
       <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
   <% else %>
       <%= link_to 'Войти', new_user_session_path %> или <%= link_to 'Зарегистрироваться', new_user_registration_path %>
