--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -1,14 +1,35 @@
-<table>
-  <% @products.each do |product| %>
+<table class="table">
+  <thead>
     <tr>
-      <td><%= link_to product.name, product_path(product) %></td>
-      <% if @user && @user.manager? %>
-          <td><%= button_to 'Изменить', edit_product_path(product), method: 'get'%></td>
-          <td><%= button_to 'Удалить', product_path(product), method: 'delete', data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
+      <th scope="col">Название</th>
+      <th scope="col">Цена</th>
+      <th scope="col">В наличии</th>
+      <th scope="col"></th>
     </tr>
-  <% end %>
+  </thead>
+  <tbody>
+    <% @products.each do |product| %>
+        <tr>
+          <td><%= product.name %></td>
+          <td><%= product.price %></td>
+          <td><%= product.quantity %></td>
+          <td>
+            <% if @user && @user.manager? %>
+                <%= button_to 'Изменить', edit_product_path(product), method: 'get'%>
+                <%= button_to 'Удалить', product_path(product), method: 'delete', data: { confirm: 'Are you sure?' } %></td>
+            <% else %>
+                <%= form_with url: request_create_path , method: :post do |form| %>
+                  <%= form.number_field :quantity, placeholder: "Кол-во", required: true, max: product.quantity, min: 1 %>
+                  <%= form.hidden_field :product_id, value: product.id %>
+                  <%= form.submit 'Оформить заявку' %>
+                <% end %>
+            <% end %>
+          </td>
+        </tr>
+    <% end %>
+  </tbody>
 </table>
+
 <% if @user && @user.manager? %>
     <%= link_to "Добавить", new_product_path %>
 <% end %>
