--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to 'Домой шкила', root_path, { :class=>"nav-link" } %>
+          <%= link_to 'Домой', root_path, { :class=>"nav-link" } %>
         </li>
         <li class="nav-item">
             <%= link_to 'Продукты', product_index_path, { :class=>"nav-link" } %>
